# AccoFinder

./: CMakeLists.txt  Main.qml  README.md  main.cpp
android/: AndroidManifest.xml  build.gradle  gradle.properties
android/res/drawable/: qtsplashscreen.xml
android/res/layout/: activity_splash.xml
android/res/values/: splash_theme.xml  styles.xml
android/src/com/accofinder/: AlarmHelper.java  AlarmReceiver.java  AlarmService.java  BatteryOptimizationHelper.java  GalleryHelper.java  NativeBridge.java  RequestReadExternalStorage.java  ScheduledWorker.java  SplashActivity.java  WorkManagerHelper.java
src/application/controllers/: authcontroller.cpp  authcontroller.h  bookingcontroller.cpp  bookingcontroller.h  disputecontroller.cpp  disputecontroller.h  paymentcontroller.cpp  paymentcontroller.h  propertycontroller.cpp  propertycontroller.h  roomcontroller.cpp  roomcontroller.h  verificationcontroller.cpp  verificationcontroller.h
src/application/dto/: bookingdto.cpp  bookingdto.h  disputedto.cpp  disputedto.h  notificationdto.cpp  notificationdto.h  paymentdto.cpp  paymentdto.h  propertydto.cpp  propertydto.h  roomdto.cpp  roomdto.h  userdto.cpp  userdto.h  verificationdto.cpp  verificationdto.h
src/core/utils/: EBookingStatus.h  EDisputeStatus.h  EPaymentStatus.h  EPropertyStatus.h  EVerificationStatus.h  appsettings.cpp  appsettings.h
src/models/: agent.cpp  agent.h  booking.cpp  booking.h  client.cpp  client.h  dispute.cpp  dispute.h  landlord.cpp  landlord.h  notification.cpp  notification.h  payment.cpp  payment.h  property.cpp  property.h  review.cpp  review.h  room.cpp  room.h  user.cpp  user.h  verification.cpp  verification.h
src/presentation/models/: bookinglistmodel.cpp  bookinglistmodel.h  disputeslistmodel.cpp  disputeslistmodel.h  propertylistmodel.cpp  propertylistmodel.h  reviewlistmodel.cpp  reviewlistmodel.h  roomlistmodel.cpp  roomlistmodel.h
src/presentation/viewmodels/: bookingviewmodel.cpp  bookingviewmodel.h  disputeslistviewmodel.cpp  disputeslistviewmodel.h  propertyviewmodel.cpp  propertyviewmodel.h  reviewviewmodel.cpp  reviewviewmodel.h  roomviewmodel.cpp  roomviewmodel.h
src/repositories/impl/: bookingrepositoryimpl.cpp  bookingrepositoryimpl.h  disputerepositoryimpl.cpp  disputerepositoryimpl.h  notificationserviceimpl.h  paymentrepositoryimpl.cpp  paymentrepositoryimpl.h  propertyrepositoryimpl.cpp  propertyrepositoryimpl.h  roomrepositoryimpl.cpp  roomrepositoryimpl.h  userrepositoryimpl.cpp  userrepositoryimpl.h  verificationrepositoryimpl.cpp  verificationrepositoryimpl.h
src/repositories/interfaces/: IBookingRepository.h  IDisputeRepository.h  INotification.h  IPaymentGateway.h  IPropertyRepository.h  IRoomRepository.h  IUserRepository.h  IVerificationRepository.h
src/services/: apiclient.cpp  apiclient.h  emailservice.cpp  emailservice.h  notificationserviceimpl.cpp  notificationserviceimpl.h  paymentgatewayimpl.cpp  paymentgatewayimpl.h
